--- a/chatserver/my-app/package.json
+++ b/chatserver/my-app/package.json
@@ -17,6 +17,7 @@
     "dotenv": "~4.0.0",
     "socket.io": "2.0.1",
     "@google-cloud/pubsub": "^0.18",
+    "@google-cloud/bigquery": "^1.3.0",
     "uuid": "3.2.1"
   }
 }
