--- a/cloud.yaml
+++ b/cloud.yaml
@@ -36,8 +36,8 @@ steps:
     - 'CLOUDSDK_CONTAINER_CLUSTER=production'
 
 # Expose the service
-- name: 'gcr.io/cloud-builders/kubectl'
-  args: [ 'expose', 'deployment', 'my-app', '--type="LoadBalancer"' ]
+#- name: 'gcr.io/cloud-builders/kubectl'
+#  args: [ 'expose', 'deployment', 'my-app', '--type="LoadBalancer"' ]
 
 
 
