--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,8 +15,8 @@ spec:
         name: django
         ports:
         - containerPort: 8080
-      - image: gcr.io/gke-pipeline-savelee-192517/angular-image:latest
-        name: angular
+      - image: gcr.io/gke-pipeline-savelee-192517/googlebank-image:latest
+        name: googlebank
         ports:
         - containerPort: 80
       - image: gcr.io/gke-pipeline-savelee-192517/chatserver-image:latest
