--- a/cloudfunctions/chatanalytics/package.json
+++ b/cloudfunctions/chatanalytics/package.json
@@ -1,10 +1,10 @@
 {
     "name": "chatanalytics",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "dependencies": {
-      "@google-cloud/bigquery": "^1.1.0",
-      "@google-cloud/language": "^1.2.0",
-      "@google-cloud/translate": "^1.1.0"
+      "@google-cloud/bigquery": "^1.3.0",
+      "@google-cloud/language": "^2.0.0",
+      "@google-cloud/dlp": "^0.9.0"
     }
   }
   
