--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,11 +24,13 @@
     "@angular/platform-server": "^7.0.2",
     "@angular/router": "^6.1.0",
     "@nguniversal/express-engine": "^7.0.2",
+    "@nguniversal/module-map-ngfactory-loader": "^7.0.2",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "rxjs": "~6.2.0",
+    "ts-loader": "^5.3.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
