--- a/front-end/package.json
+++ b/front-end/package.json
@@ -30,6 +30,7 @@
     "@nguniversal/express-engine": "^7.0.2",
     "@nguniversal/module-map-ngfactory-loader": "^7.0.2",
     "core-js": "^2.5.7",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
