--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -1,8 +1,6 @@
 ### STAGE 1: Build ###
-
-# We label our stage as 'builder'
-FROM node:latest as builder
-
+#FROM node:latest as builder
+FROM gcr.io/cloud-builders/npm
 LABEL maintainer="Lee Boonstra"
 
 ADD . .
@@ -10,28 +8,23 @@ ADD . .
 WORKDIR .
 
 RUN npm set progress=false && npm config set depth 0 && npm cache clean --force
-
-## Storing node modules on a separate layer will prevent unnecessary npm installs at each build
 RUN npm install
 
+RUN npm run build:client-and-server-bundles
+RUN npm run webpack:server
+
 ## Build the angular app in production mode and store the artifacts in dist folder
-
-RUN npm rebuild node-sass
-
-RUN $(npm bin)/ng build --prod --build-optimizer
-
+#RUN npm rebuild node-sass
+#RUN $(npm bin)/ng build --prod --build-optimizer
 
 ### STAGE 2: Setup ###
-
 FROM nginx:1.13.3-alpine
 
-## Copy our default nginx config
-ADD ./my-app/nginx/default.conf /etc/nginx/conf.d/
-
-## Remove default nginx website
+ADD ./nginx/default.conf /etc/nginx/conf.d/
 RUN rm -rf /usr/share/nginx/html/*
 
-## From 'builder' stage copy over the artifacts in dist folder to default nginx public folder
-COPY --from=builder ./my-app/dist /usr/share/nginx/html
+COPY --from=builder ./dist /usr/share/nginx/html
+
+## TODO how to launch the SSR version?
 
 CMD ["nginx", "-g", "daemon off;"]
