--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,10 +15,14 @@ spec:
         name: django
         ports:
         - containerPort: 8080
-      - image: gcr.io/gke-pipeline-savelee-192517/googlebank-image:latest
-        name: googlebank
+      - image: gcr.io/gke-pipeline-savelee-192517/front-end-image:latest
+        name: front-end
         ports:
         - containerPort: 80
+      #- image: gcr.io/gke-pipeline-savelee-192517/front-end-server-image:latest
+      #  name: front-end-server
+      #  ports:
+      #  - containerPort: 4000
       - image: gcr.io/gke-pipeline-savelee-192517/chatserver-image:latest
         name: chatserver
         ports:
