--- a/front-end/Dockerfile_SSR
+++ b/front-end/Dockerfile_SSR
@@ -1,3 +1,4 @@
+##Server Side Docker
 ### STAGE 1: Build ###
 FROM gcr.io/cloud-builders/npm as builder
 LABEL maintainer="Lee Boonstra"
@@ -8,20 +9,23 @@ COPY package.json /my-app/
 COPY angular.json /my-app/
 COPY tsconfig.json /my-app/
 COPY tslint.json /my-app/
+COPY server.ts /my-app/
+COPY webpack.server.config.js /my-app/
 
 RUN npm set progress=false && npm config set depth 0 && npm cache clean --force
 RUN npm install --force
 
 COPY /src/ /my-app/src/
 
-RUN npm run build -- --output-path=./dist/front-end/
-
+RUN npm run build:ssr -- --output-path=./dist/front-end-server/
+RUN npm run webpack:server -- --output-path=./dist/
+ 
 ### STAGE 2: Setup ###
-FROM nginx:1.15
+FROM nginx:1.13.3-alpine
 
 ADD ./nginx/default.conf /etc/nginx/conf.d/
 RUN rm -rf /usr/share/nginx/html/*
 
-COPY --from=builder /my-app/dist/front-end/ /usr/share/nginx/html
+COPY --from=builder dist/front-end-server /usr/share/nginx/html
 
 CMD ["nginx", "-g", "daemon off;"]
