fix broken Docker images

--- a/chatserver/Dockerfile
+++ b/chatserver/Dockerfile
@@ -2,14 +2,19 @@ FROM node:latest
 
 LABEL maintainer="Lee Boonstra"
 
-ADD . .
+WORKDIR .
 
-WORKDIR ./my-app
+COPY /my-app/package.json .
+COPY /my-app/app.js .
+COPY /my-app/structjson.js .
 
 RUN npm set progress=false && npm config set depth 0 && npm cache clean --force
+RUN npm install grpc --build-from-source
 
-RUN npm install --force
+RUN npm install
+RUN npm install pm2 -g
+RUN npm rebuild
 
 EXPOSE 3000
 
-CMD ["node", "app.js"]
+CMD ["pm2-runtime", "app.js"]
