--- a/front-end/nginx/default.conf
+++ b/front-end/nginx/default.conf
@@ -16,20 +16,18 @@ server {
   gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
   gzip_comp_level   9;
 
-
   root /usr/share/nginx/html;
-
 
   location / {
     try_files $uri $uri/ /index.html =404;
   }
 
   location /api {
-    proxy_pass http://localhost:8080/;
+    proxy_pass http://django-service:8080/;
   }
 
-  location /ssr {
-    proxy_pass http://localhost:4000/;
+  location /html {
+    proxy_pass http://front-end-ssr-service:4000/;
   }
 
   # Requests for socket.io are passed on to Node on port 3000
@@ -39,7 +37,7 @@ server {
       proxy_set_header Host $http_host;
       proxy_set_header X-NginX-Proxy true;
 
-      proxy_pass http://localhost:3000;
+      proxy_pass http://chatserver-service:3000;
       #proxy_redirect off;
 
       proxy_http_version 1.1;
