--- a/cloud.yaml
+++ b/cloud.yaml
@@ -1,29 +1,29 @@
 steps:
 # Build Django Container
-#- name: 'gcr.io/cloud-builders/docker'
-#  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/django-image', './server' ]
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/django-image', './server' ]
 
 # Build ChatServer Container
-#- name: 'gcr.io/cloud-builders/docker'
-#  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/chatserver-image', './chatserver' ]
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/chatserver-image', './chatserver' ]
 
 # Build New Front-end Container
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/front-end-image', './front-end' ]
 
 # Build New Front-end Container SSR
-#- name: 'gcr.io/cloud-builders/docker'
-#  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/front-end-server-image', '-f', 'Dockerfile_SSR', './front-end' ]
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/front-end-server-image', '-f', './front-end/Dockerfile_SSR', './front-end' ]
 
 # Push updated Django Container
-#- id: 'Push Django image to registry'
-#  name: 'gcr.io/cloud-builders/docker'
-#  args: [ 'push', 'gcr.io/$PROJECT_ID/django-image' ]
+- id: 'Push Django image to registry'
+  name: 'gcr.io/cloud-builders/docker'
+  args: [ 'push', 'gcr.io/$PROJECT_ID/django-image' ]
 
 # Push updated ChatServer Container
-#- id: 'Push ChatServer image to registry'
-#  name: 'gcr.io/cloud-builders/docker'
-#  args: [ 'push', 'gcr.io/$PROJECT_ID/chatserver-image' ]
+- id: 'Push ChatServer image to registry'
+  name: 'gcr.io/cloud-builders/docker'
+  args: [ 'push', 'gcr.io/$PROJECT_ID/chatserver-image' ]
 
 # Push updated Front-end Container
 - id: 'Push Front-end image to registry'
@@ -31,24 +31,23 @@ steps:
   args: [ 'push', 'gcr.io/$PROJECT_ID/front-end-image' ]
 
 # Push updated Front-end Container SSR
-#- id: 'Push Front-end image to registry'
-#  name: 'gcr.io/cloud-builders/docker'
-#  args: [ 'push', 'gcr.io/$PROJECT_ID/front-end-server-image' ]
-
-
+- id: 'Push Front-end image to registry'
+  name: 'gcr.io/cloud-builders/docker'
+  args: [ 'push', 'gcr.io/$PROJECT_ID/front-end-server-image' ]
+  
 # Deploy all in the Cloud
 - name: 'gcr.io/cloud-builders/kubectl'
   args: [ 'apply', '-f', 'deployment.yaml' ]
   env:
     - 'CLOUDSDK_COMPUTE_ZONE=europe-west1-c'
-    - 'CLOUDSDK_CONTAINER_CLUSTER=production'
+    - 'CLOUDSDK_CONTAINER_CLUSTER=futurebank'
 
 # Expose the service
-#- name: 'gcr.io/cloud-builders/kubectl'
-#  args: [ 'expose', 'deployment', 'my-app', '--type="LoadBalancer"' ]
+- name: 'gcr.io/cloud-builders/kubectl'
+  args: [ 'expose', 'deployment', 'futurebank', '--type="LoadBalancer"' ]
 
 images:
 - 'gcr.io/$PROJECT_ID/django-image'
 - 'gcr.io/$PROJECT_ID/front-end-image'
 - 'gcr.io/$PROJECT_ID/chatserver-image'
-#- 'gcr.io/$PROJECT_ID/front-end-server-image'
+- 'gcr.io/$PROJECT_ID/front-end-server-image'
