--- a/cloudbuilder/chatserver-deployment.yaml
+++ b/cloudbuilder/chatserver-deployment.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: "extensions/v1beta1"
 kind: "Deployment"
 metadata:
@@ -7,7 +6,7 @@ metadata:
   labels:
     app: "chatserver"
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: "chatserver"
@@ -21,32 +20,22 @@ spec:
         image: "gcr.io/gke-pipeline-savelee-192517/chatserver-image:latest"
         env:
           - name: "GOOGLE_APPLICATION_CREDENTIALS"
-            value: "/var/run/secret/cloud.google.com/master.json"
+            value: /var/secrets/master.json
           - name: "GCLOUD_PROJECT"
             valueFrom:
               configMapKeyRef:
                 name: chatserver-config
                 key: GCLOUD_PROJECT
+          - name: "TOPIC"
+            valueFrom:
+              configMapKeyRef:
+                name: chatserver-config
+                key: TOPIC
         volumeMounts:
-          - mountPath: /var/run/secret/cloud.google.com/
-            name: dialogflow
+          - name: mykeys
+            mountPath: /var/secrets/
             readOnly: true
       volumes:
-      - emptyDir: {}
-        name: dialogflow
----
-apiVersion: "autoscaling/v1"
-kind: "HorizontalPodAutoscaler"
-metadata:
-  name: "chatserver-hpa"
-  namespace: "default"
-  labels:
-    app: "chatserver"
-spec:
-  scaleTargetRef:
-    kind: "Deployment"
-    name: "chatserver"
-    apiVersion: "apps/v1beta1"
-  minReplicas: 1
-  maxReplicas: 5
-  targetCPUUtilizationPercentage: 80
+      - name: mykeys
+        secret:
+          secretName: credentials
