fix broken nginx proxy

--- a/cloudbuilder/front-end.yaml
+++ b/cloudbuilder/front-end.yaml
@@ -7,3 +7,12 @@ steps:
 - id: 'Push Front-end image to registry'
   name: 'gcr.io/cloud-builders/docker'
   args: [ 'push', 'gcr.io/$PROJECT_ID/front-end-image' ]
+
+# Delete Existing Deployment 
+- name: 'gcr.io/cloud-builders/kubectl'
+  args: [ 'delete', 'deployment', 'front-end' ]
+
+# Deploy all in the Cloud
+- name: 'gcr.io/cloud-builders/kubectl'
+  args: [ 'apply', '-f', 'cloudbuilder/front-end-deployment.yaml' ]
+
