--- a/front-end/nginx/default.conf
+++ b/front-end/nginx/default.conf
@@ -23,10 +23,12 @@ server {
   }
 
   location /api {
+    #This name maps to the GKE Service label name
     proxy_pass http://django-service:8080/;
   }
 
   location /html {
+    #This name maps to the GKE Service label name
     proxy_pass http://front-end-ssr-service:4000/;
   }
 
@@ -37,8 +39,9 @@ server {
       proxy_set_header Host $http_host;
       proxy_set_header X-NginX-Proxy true;
 
+      #This name maps to the GKE Service label name
       proxy_pass http://chatserver-service:3000;
-      #proxy_redirect off;
+      proxy_redirect off;
 
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
