--- a/cloudbuilder/chatserver.yaml
+++ b/cloudbuilder/chatserver.yaml
@@ -8,6 +8,10 @@ steps:
   name: 'gcr.io/cloud-builders/docker'
   args: [ 'push', 'gcr.io/$PROJECT_ID/chatserver-image' ]
 
+# Delete Existing Deployment 
+- name: 'gcr.io/cloud-builders/kubectl'
+  args: [ 'delete', 'deployment', 'chatserver' ]
+
 # Deploy all in the Cloud
 - name: 'gcr.io/cloud-builders/kubectl'
   args: [ 'apply', '-f', 'cloudbuilder/chatserver-deployment.yaml' ]
