--- a/cloudbuilder/front-end-ssr.yaml
+++ b/cloudbuilder/front-end-ssr.yaml
@@ -8,6 +8,10 @@ steps:
   name: 'gcr.io/cloud-builders/docker'
   args: [ 'push', 'gcr.io/$PROJECT_ID/front-end-server-image' ]
 
+# Delete Existing Deployment 
+- name: 'gcr.io/cloud-builders/kubectl'
+  args: [ 'delete', 'deployment', 'front-end-ssr' ]
+
 # Deploy all in the Cloud
 - name: 'gcr.io/cloud-builders/kubectl'
   args: [ 'apply', '-f', 'cloudbuilder/front-end-ssr-deployment.yaml' ]
