--- a/cloudbuilder/front-end.yaml
+++ b/cloudbuilder/front-end.yaml
@@ -15,4 +15,6 @@ steps:
 # Deploy all in the Cloud
 - name: 'gcr.io/cloud-builders/kubectl'
   args: [ 'apply', '-f', 'cloudbuilder/front-end-deployment.yaml' ]
-
+  env:
+    - 'CLOUDSDK_COMPUTE_ZONE=europe-west1-c'
+    - 'CLOUDSDK_CONTAINER_CLUSTER=futurebank'
