--- a/cloudbuilder/django-deployment.yaml
+++ b/cloudbuilder/django-deployment.yaml
@@ -18,3 +18,5 @@ spec:
       containers:
       - name: "django-image"
         image: "gcr.io/gke-pipeline-savelee-192517/django-image:latest"
+        ports:
+        - containerPort: 8080
