--- a/chatserver/my-app/package.json
+++ b/chatserver/my-app/package.json
@@ -12,12 +12,12 @@
   },
   "private": true,
   "dependencies": {
+    "@google-cloud/bigquery": "^1.3.0",
+    "@google-cloud/pubsub": "^0.20.1",
     "debug": "^4.1.0",
     "dialogflow": "^0.7.0",
     "dotenv": "~4.0.0",
-    "socket.io": "2.0.1",
-    "@google-cloud/pubsub": "^0.20.1",
-    "@google-cloud/bigquery": "^1.3.0",
+    "socket.io": "^2.2.0",
     "uuid": "3.3.2"
   }
 }
