--- a/front-end/package.json
+++ b/front-end/package.json
@@ -34,6 +34,7 @@
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "ngx-file-drop": "^5.0.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "ts-loader": "^5.3.0",
