fixes in cloudbuilders

--- a/cloudbuilder/fileserver.yaml
+++ b/cloudbuilder/fileserver.yaml
@@ -11,7 +11,10 @@ steps:
 # Delete Existing Deployment 
 - name: 'gcr.io/cloud-builders/kubectl'
   args: [ 'delete', 'deployment', 'fileserver' ]
-
+  env:
+    - 'CLOUDSDK_COMPUTE_ZONE=europe-west1-c'
+    - 'CLOUDSDK_CONTAINER_CLUSTER=futurebank'
+    
 # Deploy all in the Cloud
 - name: 'gcr.io/cloud-builders/kubectl'
   args: [ 'apply', '-f', 'cloudbuilder/fileserver-deployment.yaml' ]
