--- a/chatserver/my-app/package.json
+++ b/chatserver/my-app/package.json
@@ -5,7 +5,7 @@
   "license": "Apache-2.0",
   "description": "Code sample for Dialogflow app back-end.",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "engines": {
     "node": ">=8"
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google-cloud/bigquery": "^2.0.3",
     "@google-cloud/pubsub": "^0.22.2",
+    "@google/chatbase": "^1.1.2",
     "debug": "^4.1.0",
     "dialogflow": "^0.7.0",
     "dotenv": "~4.0.0",
