--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -9,16 +9,14 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "importHelpers": true,
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
-      "es2017",
+      "es2018",
       "dom"
     ]
-  },
-  "angularCompilerOptions": {
-    "enableIvy": false
   }
 }
