fix install steps django

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,3 +1,5 @@
+# https://cloud.google.com/python/django/kubernetes-engine
+
 FROM gcr.io/google_appengine/python
 
 LABEL maintainer="Lee Boonstra"
@@ -7,6 +9,7 @@ ENV PATH /env/bin:$PATH
 
 ADD ./requirements.txt ./
 RUN pip install -r requirements.txt
+RUN python manage.py migrate
 
 ADD . /app
 
