--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -10,11 +10,11 @@ COPY tsconfig.json /my-app/
 COPY tslint.json /my-app/
 
 RUN npm set progress=false && npm config set depth 0 && npm cache clean --force
-RUN npm install --force
 
 COPY /src/ /my-app/src/
 
-RUN npm install typescript@">=3.2.2"
+RUN npm install typescript@">=3.2.2 <3.3.0" --save-dev --save-exact
+RUN npm install --force
 
 RUN npm run build
 
