--- a/cloudbuilder/chatserver.yaml
+++ b/cloudbuilder/chatserver.yaml
@@ -6,8 +6,10 @@ steps:
 # Push updated ChatServer Container
 - id: 'Push ChatServer image to registry'
   name: 'gcr.io/cloud-builders/docker'
-  args: [ 'push', 'gcr.io/$PROJECT_ID/chatserver-image' ]
-
+  env:
+    - 'CLOUDSDK_COMPUTE_ZONE=europe-west1-c'
+    - 'CLOUDSDK_CONTAINER_CLUSTER=futurebank'
+    
 # Delete Existing Deployment 
 - name: 'gcr.io/cloud-builders/kubectl'
   args: [ 'delete', 'deployment', 'chatserver' ]
