fix in nginx which cause pod to crash

--- a/front-end/nginx/default.conf
+++ b/front-end/nginx/default.conf
@@ -29,7 +29,7 @@ server {
 
   location /html {
     #This name maps to the GKE Service label name
-    proxy_pass http://front-end-ssr-service:4000/;
+    proxy_pass http://front-end-service:4000/;
   }
 
   # Requests for socket.io are passed on to Node on port 3000
