fixes in Dockerfile

--- a/chatserver/Dockerfile
+++ b/chatserver/Dockerfile
@@ -2,19 +2,17 @@ FROM node:latest
 
 LABEL maintainer="Lee Boonstra"
 
-WORKDIR .
+WORKDIR /app
 
-COPY package.json .
-COPY /src/ .
+COPY package.json /app
+COPY . /app
 
 RUN npm set progress=false && npm config set depth 0 && npm cache clean --force
 RUN npm install grpc --build-from-source
-
-RUN npm install
 RUN npm install pm2 -g
-RUN npm build
-RUN npm rebuild
+RUN npm install
+RUN npm run build
 
 EXPOSE 3000
 
-CMD ["pm2-runtime", "dist/main.js"]
+CMD ["pm2-runtime", "/app/dist/src/main.js"]
