--- a/cloudbuilder/front-end-deployment.yaml
+++ b/cloudbuilder/front-end-deployment.yaml
@@ -18,3 +18,5 @@ spec:
       containers:
       - name: "front-end-image"
         image: "gcr.io/gke-pipeline-savelee-192517/front-end-image:latest"
+        ports:
+        - containerPort: 4200 
