--- a/front-end/nginx/default.conf
+++ b/front-end/nginx/default.conf
@@ -21,24 +21,24 @@ server {
     try_files $uri $uri/ /index.html =404;
   }
 
-  # location /api {
-  # This name maps to the GKE Service label name
-  #  proxy_pass http://django-service:8080/;
-  # }
+  location /api {
+  #This name maps to the GKE Service label name
+    proxy_pass http://django-service:8080/;
+  }
 
   # Requests for socket.io are passed on to Node on port 3000
-  #location ~* \.io {
-  #    proxy_set_header X-Real-IP $remote_addr;
-  #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  #    proxy_set_header Host $http_host;
-  #    proxy_set_header X-NginX-Proxy true;
+  location ~* \.io {
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-NginX-Proxy true;
 
       #This name maps to the GKE Service label name
- #     proxy_pass http://chatserver-service:3000;
- #     proxy_redirect off;
+      proxy_pass http://chatserver-service:3000;
+      proxy_redirect off;
 
- #     proxy_http_version 1.1;
- #     proxy_set_header Upgrade $http_upgrade;
- #     proxy_set_header Connection "upgrade";
- #   }
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+    }
 }
