fix broken transactions tab

--- a/front-end/nginx/default.conf
+++ b/front-end/nginx/default.conf
@@ -21,7 +21,7 @@ server {
     try_files $uri $uri/ /index.html =404;
   }
 
-  location /api {
+  location /api/* {
   #This name maps to the GKE Service label name
     proxy_pass http://django-service:8080/;
   }
