--- a/cloudbuilder/services.yaml
+++ b/cloudbuilder/services.yaml
@@ -17,7 +17,7 @@ metadata:
   name: front-end-service
 spec:
   type: LoadBalancer
-  loadBalancerIP: 34.95.97.143
+  #loadBalancerIP: 34.95.97.143
   selector:
     app: front-end
   ports:
