--- a/front-end/nginx/default.conf
+++ b/front-end/nginx/default.conf
@@ -21,9 +21,9 @@ server {
     try_files $uri $uri/ /index.html =404;
   }
 
-  location /api/* {
-  #This name maps to the GKE Service label name
-    proxy_pass http://django-service:8080/;
+  location /api {
+    #This name maps to the GKE Service label name
+    proxy_pass http://django-service:8080;
   }
 
   # Requests for socket.io are passed on to Node on port 3000
