--- a/chatserver/package.json
+++ b/chatserver/package.json
@@ -47,12 +47,13 @@
     "@google/chatbase": "^1.1.2",
     "cors": "^2.8.5",
     "debug": "^4.1.0",
-    "dialogflow": "^0.9.0",
+    "dialogflow": "^0.9.0", 
     "dir-compare": "^1.7.2",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "socket.io": "^2.2.0",
     "source-map-support": "^0.5.11",
+    "unzipper": "^0.10.1",
     "uuid": "^3.3.2"
   }
 }
