--- a/chatserver/tsconfig.json
+++ b/chatserver/tsconfig.json
@@ -16,7 +16,8 @@
     "noUnusedParameters": true,
     "noImplicitAny": false,
     "noImplicitThis": false,
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "strictFunctionTypes": false
   },
   "include": [
     "src/**/*",
